--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,7 +31,7 @@ a {
   text-decoration: none;
   color: #fff;
   text-transform: uppercase;
-  font-weight: bold;
+  // font-weight: bold;
   border-bottom: 3px transparent solid;
   padding-bottom: 0.5rem;
   transition: border-color 0.5s;
@@ -57,7 +57,7 @@ img {
 
 //Logo
 #logo {
-  width: 100px;
+  width: 200px;
   height: 70px;
   color: #fff;
   text-transform: uppercase;
