--- a/scss/main.scss
+++ b/scss/main.scss
@@ -221,7 +221,7 @@ img {
       display: grid;
       grid-template-columns: 0.5fr 2fr;
       gap: 0.5rem;
-      height: 300px;
+      height: 400px;
 
       .bio-image {
         background: url("../img/pic2.jpg") no-repeat center 30% / cover;
@@ -232,8 +232,8 @@ img {
       .bio {
         border-left: 3px solid $main-color;
         padding: 1rem;
-        line-height: 1.8rem;
-        word-spacing: 0.1rem;
+        // line-height: 1.8rem;
+        // word-spacing: 0.1rem;
 
         .lead {
           font-size: 1rem;
